--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,6 +18,7 @@ body {
   //padding: 2vh 6vw;
   position: relative;
   height: 100vh;
+  
 }
 
 .middle {
@@ -56,115 +57,21 @@ header {
   z-index: 999;
   width: 100%;
   padding: 2vh 2vw;
-  background: linear-gradient(0deg, rgba($gray,0) 0%, rgba($gray,0.6250875350140056) 20%, rgba($gray,0.742734593837535) 37%, rgba($gray,1) 64%, rgba($gray,1) 100%);
-}
-
-section,
-div {
-  box-sizing: border-box;
-}
-
-.logo-header, .header-cta {
-  height: 3vh;
-  svg{
-    height: 100%;
+  background: linear-gradient(
+    0deg,
+    rgba($gray, 0) 0%,
+    rgba($gray, 0.6250875350140056) 20%,
+    rgba($gray, 0.742734593837535) 37%,
+    rgba($gray, 1) 64%,
+    rgba($gray, 1) 100%
+  );
+  .logo-header,
+  .header-cta {
+    height: 3vh;
+    svg {
+      height: 100%;
+    }
   }
-}
-
-.fd , #logo-use{
-  //width: 80%;
-  //width: 200px;
-  //position: fixed;
-  // path {
-  //   visibility: hidden;
-  // }
-}
-.scroll-down{
-  padding: auto;
-}
-.scroll-down span {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 46px;
-  height: 46px;
-  margin-left: -23px;
-  border: 1px solid #fff;
-  border-radius: 100%;
-  box-sizing: border-box;
-}
-.scroll-down span::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  content: '';
-  width: 44px;
-  height: 44px;
-  box-shadow: 0 0 0 0 rgba(255,255,255,.1);
-  border-radius: 100%;
-  opacity: 0;
-  -webkit-animation: sdb03 3s infinite;
-  animation: sdb03 3s infinite;
-  box-sizing: border-box;
-}
-@-webkit-keyframes sdb03 {
-  0% {
-    opacity: 0;
-  }
-  30% {
-    opacity: 1;
-  }
-  60% {
-    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes sdb03 {
-  0% {
-    opacity: 0;
-  }
-  30% {
-    opacity: 1;
-  }
-  60% {
-    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-
-
-#fd{
-  //width: 80%;
-  z-index: 66666;
-  position: fixed;
-  margin:auto auto;
-  width: 80%;
-  left: 0;
-right: 0;
-top:0;
-bottom: 0;
-}
-.background {
-  width: 100vw;
-  height: 100vh;
-  background: #3E1E68;
-}
-
-
-.square{
-  position: absolute;
-  top:200px;
-  left:20px;
-}
-header {
   .cta {
     top: 0;
     svg {
@@ -172,55 +79,153 @@ header {
     }
   }
 }
-body {
-  position: relative;
-}
-#hero-cta-svg {
-  visibility: hidden;
-  z-index: 6666;
-  top: 70vh;
-  left: 80vw;
-  //   svg {
-  //     width: clamp(20px, 20vw, 200px);
-  //   }
-}
-.frieDevelopment {
-  //margin:0;
-  .btn-container {
-    display: flex;
-  }
-  .fdContainer{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-  }
-  //overflow: hidden;
-  //position: relative;
-  //text-align: center;
-  
-  #cta-contact {
-    width: 20%;
-    display: none;
-    // path {
-    //   fill: none;
-    // }
-  }
 
-} 
-.triggerCta{
-  border: 1px solid green;
+section,
+div {
+  box-sizing: border-box;
 }
+
+
+
+#fd {
+  //width: 80%;
+  z-index: 66666;
+  position: fixed;
+  margin: auto auto;
+  width: 80%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+
+.frieDevelopment {
+  
+
+}
+// .triggerCta {
+//   border: 1px solid green;
+// }
 .heroText,
-.service, 
+.service,
 .hero {
   display: flex;
   flex-direction: column;
 }
-.hero{
+.hero {
   justify-content: flex-end;
+  @keyframes bg-animation {
+    0% {
+      background-position: left;
+    }
+    50% {
+      background-position: right;
+    }
+    100% {
+      background-position: left;
+    }
+  }
   
+  .responsive {
+    svg {
+      transform: scale(0.8);
+    }
+    position: relative;
+    background-color: #ffdee9;
+    background-image: linear-gradient(45deg, #ffdee9 0%, #b5fffc 100%);
+    //background-image: linear-gradient(45deg, $light-blue 0%, $gray 100%);
+    background-image: linear-gradient(
+      45deg,
+      $light-blue 0%,
+      $middle-blue 50%,
+      $dark-blue 100%
+    );
+    background-position: left;
+    background-size: 200%;
+    animation: bg-animation 15s infinite;
+  
+    //width: 80%;
+    height: 60vh;
+    padding: 2vh 2vw;
+    .cls-1 {
+      fill: #383838;
+    }
+  
+    .cls-2 {
+      fill: #fff;
+    }
+    .cls-3 {
+      fill: none;
+      stroke: #383838;
+      stroke-miterlimit: 10;
+      stroke-width: 2px;
+    }
+    svg {
+      position: absolute;
+    }
+    h3 {
+      font-size: 1em;
+      margin: 3em 0;
+    }
+    .portrait h3 {
+      font-size: 1em;
+      margin: 10em 0;
+    }
+  
+    #ipod {
+      display: none;
+      width: 5vw;
+      //top:20vh;
+      font-size: 0vh;
+    }
+    #desktop {
+      width: clamp(20px, 95vw, 1000px);
+      //width:50vw;
+      left: 10vw;
+      bottom: 0;
+      font-size: 60px;
+    }
+  
+    #phone {
+      display: none;
+      width: 10vw;
+      right: 15vw;
+      //bottom: 0px;
+      font-size: 13px;
+    }
+    #tablet {
+      width: 14vw;
+      width: clamp(20px, 20vw, 270px);
+      right: 20;
+      bottom: 0;
+      font-size: 20px;
+    }
+    #laptop {
+      width: 40vw;
+      width: clamp(20px, 90vw, 800px);
+      bottom: 0;
+      right: 20vw;
+      font-size: 35px;
+    }
+    #watch {
+      font-size: 20px;
+    }
+  
+    .heroContainer {
+      position: relative;
+      padding: 2rem;
+      padding-top: 200px;
+      width: 100%;
+      background: $gray;
+      background: white;
+      background: #2c2c2c;
+      svg {
+        margin-bottom: 130px;
+        position: relative;
+      }
+    }
+  }
 }
 
 .service-container {
@@ -236,11 +241,10 @@ body {
   }
 
   .service-card {
-    
     border: 2px, solid, #2c2c2c;
     border-radius: 50px;
-    // box-shadow: 10px 10px 29px -5px rgba(0,0,0,0.15),
-    // 10px 10px 29px -5px rgba(235, 226, 226, 0.38);
+    box-shadow: 10px 10px 29px -5px rgba(0,0,0,0.15),
+    10px 10px 29px -5px rgba(235, 226, 226, 0.38);
     margin: 1vh 1vw;
     padding: 1vh 1vw;
     display: flex;
@@ -250,19 +254,17 @@ body {
     width: clamp(100px, 80vw, 600px);
     width: 80vw;
     max-height: 80vh;
-    // box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.15),
-    //   -2px -2px 12px rgba(255, 255, 255, 0.08);
-    // box-shadow: //2px 4px 6px rgba(0, 0, 0, 0.15),
-    //   -2px -2px 12px $highlight;
+    box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.15),
+      -2px -2px 12px rgba(255, 255, 255, 0.08);
+    box-shadow: //2px 4px 6px rgba(0, 0, 0, 0.15),
+      -2px -2px 12px $highlight;
 
     //height: 70%;
-    .content{
-      
-        p, .service-title{
-          color:$gray;
-        }
-      
-      
+    .content {
+      p,
+      .service-title {
+        color: $gray;
+      }
     }
     .service-title {
       font-size: clamp(16px, 3vw, 20px);
@@ -272,18 +274,19 @@ body {
     }
   }
 
-
   h2 {
     text-align: center;
   }
 
   .icon {
     height: 15vh;
-   // padding-right: 6vw;
+    // padding-right: 6vw;
     display: flex;
     justify-content: center;
-    #services-svg{visibility: hidden;}
-    svg{
+    #services-svg {
+      visibility: hidden;
+    }
+    svg {
       height: 20vh;
     }
   }
@@ -332,7 +335,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        min-height: 70vh;
+        max-height: 60vh;
         width: 80vw;
         margin-right: 10vw;
         @media screen and (min-width: 1200px) {
@@ -365,7 +368,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1.2em;
+    font-size: clamp(13px,2vw, 23px);
     div {
       margin: 1vh 0;
       display: flex;
@@ -402,18 +405,30 @@ body {
     font-weight: 800;
     display: none;
   }
-
 }
-.service-background {
+.service-background_out {
   opacity: 0.5;
   position: absolute;
   height: 150%;
   width: 100%;
-  top:-6vh;
-  background-color: #F4D03F;
-background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
+  top: -6vh;
+  background-color: #f4d03f;
+  background-image: linear-gradient(132deg, #f4d03f 0%, #16a085 100%);
 
   //background-image: url("/images/code.PNG");
+}
+
+
+.dynamic {
+  position: relative;
+  width: 100%;
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 .wordpress {
   font-size: 30em;
@@ -421,113 +436,7 @@ background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
   opacity: 0.1;
   position: absolute;
 }
-.logo-anim {
-  height: 100vh;
-  width: 100vw;
-}
-@keyframes bg-animation {
-  0% {background-position: left}
-  50% {background-position: right}
-  100% {background-position: left}
-}
 
-.responsive {
-  svg{
-    transform:scale(.8);
-  }
-  position: relative;
-  background-color: #FFDEE9;
-  background-image: linear-gradient(45deg, #FFDEE9 0%, #B5FFFC 100%);
-  //background-image: linear-gradient(45deg, $light-blue 0%, $gray 100%);
-  background-image: linear-gradient(45deg, $light-blue 0%, $middle-blue 50%, $dark-blue 100%);
-  background-position: left;
-  background-size: 200%;
-  animation: bg-animation 15s infinite;
-
-
-
-  //width: 80%;
-  height: 60vh;
-  padding: 2vh 2vw;
-  .cls-1 {
-    fill: #383838;
-  }
-
-  .cls-2 {
-    fill: #fff;
-  }
-  .cls-3 {
-    fill: none;
-    stroke: #383838;
-    stroke-miterlimit: 10;
-    stroke-width: 2px;
-  }
-  svg {
-    position: absolute;
-  }
-  h3{
-    font-size: 1em;
-    margin: 3em 0 ;
-  }
-  .portrait h3{
-    font-size: 1em;
-    margin: 10em 0 ;
-  }
-
-  #ipod {
-    display: none;
-    width: 5vw;
-    //top:20vh;
-    font-size: 0vh;
-  }
-  #desktop {
-    width: clamp(20px, 95vw, 1000px);
-    //width:50vw;
-    left: 10vw;
-    bottom: 0;
-    font-size: 60px;
-  }
-
-  #phone {
-    display: none;
-    width: 10vw;
-    right: 15vw;
-    //bottom: 0px;
-    font-size: 13px;
-  }
-  #tablet {
-    width: 14vw;
-    width: clamp(20px, 20vw, 270px);
-    right:20;
-    bottom: 0;
-    font-size:20px;
-  }
-  #laptop {
-    
-    width: 40vw;
-    width: clamp(20px, 90vw, 800px);
-  bottom: 0;
-    right: 20vw;
-    font-size: 35px;
-  }
-  #watch {
-    font-size: 20px;
-  }
-
-  .heroContainer {
-    position: relative;
-    padding: 2rem ;
-    padding-top:200px;
-    width: 100%;
-    background: $gray;
-    background: white;
-    background:#2c2c2c;
-    svg{
-      margin-bottom: 130px;
-      position: relative;
-    }
-  }
-}
 
 
 .welcomeText {
@@ -617,39 +526,25 @@ background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
   }
 }
 
- #services, #shop, #seo{
-  path{
+#services,
+#shop,
+#seo {
+  path {
     visibility: hidden;
   }
 }
-.v-spacer{
-  border:1px solid green;
-  height:90vh;
-  width:100%;
-    scroll-snap-align: center;
-}
-.dynamic{
-  position: relative;
-  width: 100%;
-}
 
-.content{
-  position: absolute;
-  width: 100%;
-  top:0;
-  left:0;
-}
-.hide{
+.hide {
   visibility: hidden;
 }
-.mask  {
-  -webkit-mask-image:url(/images/blob.svg);
-  -webkit-mask-position:center center;
-  -webkit-mask-repeat:no-repeat;
-  -webkit-mask-size:cover;
+.mask {
+  -webkit-mask-image: url(/images/blob.svg);
+  -webkit-mask-position: center center;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: cover;
 
-  mask-image:url(/images/blob.svg);
-  mask-position:center center;
-  mask-repeat:no-repeat;
-  mask-size:cover;
+  mask-image: url(/images/blob.svg);
+  mask-position: center center;
+  mask-repeat: no-repeat;
+  mask-size: cover;
 }
