--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: "Raleway";
   color: rgba(54, 169, 225, 0.6);
+  color: white;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -19,13 +20,15 @@ body {
 }
 
 p {
-  color: rgba(54, 169, 225, 0.6);
+  color: white;
   line-height: 2em;
 }
 
 h2,
 h3 {
   color: rgba(0, 100, 148, 0.6);
+  -webkit-columns: white;
+          columns: white;
   line-height: 1em;
   text-align: center;
 }
@@ -112,12 +115,6 @@ div {
           flex-direction: column;
 }
 
-.hero {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
 @-webkit-keyframes bg-animation {
   0% {
     background-position: left;
@@ -142,15 +139,21 @@ div {
   }
 }
 
+.hero {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 .hero .responsive {
   position: relative;
   background-color: #ffdee9;
   background-image: linear-gradient(45deg, #ffdee9 0%, #b5fffc 100%);
-  background-image: linear-gradient(45deg, #36a9e1 0%, #1d71b8 50%, #006494 100%);
+  background-image: linear-gradient(45deg, #006494 0%, #36a9e1 20%, #1d71b8 40%, #36a9e1 60%, #006494 80%, #36a9e1 100%);
   background-position: left;
-  background-size: 200%;
-  -webkit-animation: bg-animation 15s infinite;
-          animation: bg-animation 15s infinite;
+  background-size: 800%;
+  -webkit-animation: bg-animation 70s infinite;
+          animation: bg-animation 70s infinite;
   height: 60vh;
   padding: 2vh 2vw;
 }
@@ -267,8 +270,6 @@ div {
 .service-container .service-card {
   border: 2px, solid, #2c2c2c;
   border-radius: 50px;
-  -webkit-box-shadow: 10px 10px 29px -5px rgba(0, 0, 0, 0.15), 10px 10px 29px -5px rgba(235, 226, 226, 0.38);
-          box-shadow: 10px 10px 29px -5px rgba(0, 0, 0, 0.15), 10px 10px 29px -5px rgba(235, 226, 226, 0.38);
   margin: 1vh 1vw;
   padding: 1vh 1vw;
   display: -webkit-box;
@@ -281,17 +282,13 @@ div {
       -ms-flex-direction: column;
           flex-direction: column;
   width: clamp(100px, 80vw, 600px);
-  width: 80vw;
-  max-height: 80vh;
-  -webkit-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.15), -2px -2px 12px rgba(255, 255, 255, 0.08);
-          box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.15), -2px -2px 12px rgba(255, 255, 255, 0.08);
-  -webkit-box-shadow: -2px -2px 12px #1abc9c;
-          box-shadow: -2px -2px 12px #1abc9c;
+  width: 95vw;
 }
 
 .service-container .service-card .content p,
 .service-container .service-card .content .service-title {
   color: #2c2c2c;
+  color: #36a9e1;
 }
 
 .service-container .service-card .service-title {
@@ -315,6 +312,10 @@ div {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.service-container .icon i {
+  color: #1d71b8;
 }
 
 .service-container .icon #services-svg {
@@ -366,7 +367,7 @@ div {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  margin-left: calc(50vw - 40vw - 3vw - 3vw);
+  margin-left: calc(50vw - 45vw - 3vw - 3vw);
 }
 
 @media screen and (min-width: 1200px) {
@@ -390,8 +391,9 @@ div {
       -ms-flex-align: center;
           align-items: center;
   max-height: 60vh;
-  width: 80vw;
+  width: 90vw;
   margin-right: 10vw;
+  min-height: 75vh;
 }
 
 @media screen and (min-width: 1200px) {
@@ -432,6 +434,7 @@ div {
 }
 
 .service-container .services .service-title {
+  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -442,6 +445,22 @@ div {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: end;
+  font-style: italic;
+}
+
+.service-container .services .service-title .darkBl {
+  color: #006494;
+  visibility: visible !important;
+}
+
+.service-container .services .service-title .lightBl {
+  color: #36a9e1;
+  visibility: visible !important;
+}
+
+.service-container .services .service-title .middleBl {
+  color: #1d71b8;
+  visibility: visible !important;
 }
 
 .service-container i {
@@ -477,14 +496,41 @@ div {
   display: none;
 }
 
-.service-background_out {
-  opacity: 0.5;
+.service-background {
   position: absolute;
   height: 150%;
   width: 100%;
   top: -6vh;
   background-color: #f4d03f;
   background-image: linear-gradient(132deg, #f4d03f 0%, #16a085 100%);
+  background-color: #FF9A8B;
+  background-image: linear-gradient(45deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+  opacity: 0.5;
+  background-size: 900%;
+  background-position: left;
+  -webkit-animation: bg-animation 30s infinite;
+          animation: bg-animation 30s infinite;
+  z-index: -444;
+}
+
+.service-d .service-background {
+  background-image: linear-gradient(132deg, #2c2c2c 0%, #36a9e1 100%);
+}
+
+.service-fs .service-background {
+  background-image: linear-gradient(45deg, #2c2c2c 0%, #006494 100%);
+}
+
+.service-os .service-background {
+  background-image: linear-gradient(45deg, #2c2c2c 0%, #1d71b8 100%);
+}
+
+.service-seo .service-background {
+  background-image: linear-gradient(125deg, #2c2c2c 0%, #36a9e1 100%);
+}
+
+.service-dev .service-background {
+  background-image: linear-gradient(184deg, #2c2c2c 0%, #006494 100%);
 }
 
 .dynamic {
