--- a/styles/styles.css
+++ b/styles/styles.css
@@ -292,7 +292,7 @@ div {
 }
 
 .service-container .service-card .service-title {
-  font-size: clamp(16px, 3vw, 20px);
+  font-size: clamp(13px, 3vw, 20px);
   font-weight: 400;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -316,6 +316,13 @@ div {
 
 .service-container .icon i {
   color: #1d71b8;
+  -webkit-background-clip: text;
+  font-weight: 900;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(red), to(yellow));
+  background-image: linear-gradient(red, yellow);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#36a9e1), to(#006494));
+  background-image: linear-gradient(#36a9e1, #006494);
+  -webkit-text-fill-color: transparent;
 }
 
 .service-container .icon #services-svg {
@@ -351,7 +358,7 @@ div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: clamp(13px, 2vw, 23px);
+  font-size: clamp(16px, 2vw, 20px);
 }
 
 .service-container .services.moreContent {
@@ -422,19 +429,34 @@ div {
   height: 70%;
 }
 
-.service-container .services div {
-  margin: 1vh 0;
+.service-container .services .title-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 10vh;
 }
 
-.service-container .services .service-title {
+.service-container .services .title-icon .service-title::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: calc(100%+2vw);
+  width: 100%;
+  height: 100%;
+  z-index: -44;
+  opacity: 0.5;
+  background-color: #2c2c2c;
+}
+
+.service-container .services .title-icon .service-title {
   color: white;
+  padding: 0 2vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -448,17 +470,17 @@ div {
   font-style: italic;
 }
 
-.service-container .services .service-title .darkBl {
+.service-container .services .title-icon .service-title .darkBl {
   color: #006494;
   visibility: visible !important;
 }
 
-.service-container .services .service-title .lightBl {
+.service-container .services .title-icon .service-title .lightBl {
   color: #36a9e1;
   visibility: visible !important;
 }
 
-.service-container .services .service-title .middleBl {
+.service-container .services .title-icon .service-title .middleBl {
   color: #1d71b8;
   visibility: visible !important;
 }
@@ -503,10 +525,10 @@ div {
   top: -6vh;
   background-color: #f4d03f;
   background-image: linear-gradient(132deg, #f4d03f 0%, #16a085 100%);
-  background-color: #FF9A8B;
-  background-image: linear-gradient(45deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+  background-color: #ff9a8b;
+  background-image: linear-gradient(45deg, #ff9a8b 0%, #ff6a88 55%, #ff99ac 100%);
   opacity: 0.5;
-  background-size: 900%;
+  background-size: 400%;
   background-position: left;
   -webkit-animation: bg-animation 30s infinite;
           animation: bg-animation 30s infinite;
