--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,14 +6,14 @@ $middle-blue: #1d71b8;
 $light-blue: #36a9e1;
 $highlight: rgba(26, 188, 156, 1);
 //$font:#E1BAA9;
-$font:white;
+$font: white;
 
 * {
   margin: 0;
   padding: 0;
   font-family: "Raleway";
   color: rgba($light-blue, 0.6);
-  color:$font;
+  color: $font;
   box-sizing: border-box;
 }
 body {
@@ -21,7 +21,6 @@ body {
   //padding: 2vh 6vw;
   position: relative;
   height: 100vh;
-  
 }
 
 .middle {
@@ -31,7 +30,7 @@ body {
 
 p {
   //color: rgba($light-blue, 0.6);
-  color:$font;
+  color: $font;
   line-height: 2em;
 }
 h2,
@@ -90,8 +89,6 @@ div {
   box-sizing: border-box;
 }
 
-
-
 #fd {
   //width: 80%;
   z-index: 66666;
@@ -104,10 +101,7 @@ div {
   bottom: 0;
 }
 
-
 .frieDevelopment {
-  
-
 }
 // .triggerCta {
 //   border: 1px solid green;
@@ -131,8 +125,7 @@ div {
 }
 .hero {
   justify-content: flex-end;
-  
-  
+
   .responsive {
     svg {
       transform: scale(0.8);
@@ -153,14 +146,14 @@ div {
     background-position: left;
     background-size: 800%;
     animation: bg-animation 70s infinite;
-  
+
     //width: 80%;
     height: 60vh;
     padding: 2vh 2vw;
     .cls-1 {
       fill: #383838;
     }
-  
+
     .cls-2 {
       fill: #fff;
     }
@@ -181,7 +174,7 @@ div {
       font-size: 1em;
       margin: 10em 0;
     }
-  
+
     #ipod {
       display: none;
       width: 5vw;
@@ -195,7 +188,7 @@ div {
       bottom: 0;
       font-size: 60px;
     }
-  
+
     #phone {
       display: none;
       width: 10vw;
@@ -220,7 +213,7 @@ div {
     #watch {
       font-size: 20px;
     }
-  
+
     .heroContainer {
       position: relative;
       padding: 2rem;
@@ -273,11 +266,11 @@ div {
       p,
       .service-title {
         color: $gray;
-        color:$light-blue
+        color: $light-blue;
       }
     }
     .service-title {
-      font-size: clamp(16px, 3vw, 20px);
+      font-size: clamp(13px, 3vw, 20px);
       font-weight: 400;
       align-self: center;
       margin-bottom: 1em;
@@ -293,9 +286,14 @@ div {
     // padding-right: 6vw;
     display: flex;
     justify-content: center;
-    
-    i{
-      color:$middle-blue;
+
+    i {
+      color: $middle-blue;
+      -webkit-background-clip: text;
+      font-weight: 900;
+      background-image: linear-gradient(red, yellow);
+      background-image: linear-gradient($light-blue, $dark-blue);
+      -webkit-text-fill-color: transparent;
     }
     #services-svg {
       visibility: hidden;
@@ -383,34 +381,49 @@ div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: clamp(13px,2vw, 23px);
-    div {
-      margin: 1vh 0;
-      display: flex;
-      flex-direction: column;
-    }
-    .service-title {
-      color:white;
-      //visibility: hidden;
-      .darkBl{
-        color: $dark-blue;
-        visibility: visible !important;
-      }
-      .lightBl{
-        color: $light-blue;
-        visibility: visible !important;
-      }
-      .middleBl{
-        color: $middle-blue;
-        visibility: visible !important;
-      }
+    font-size: clamp(16px, 2vw, 20px);
+
+    .title-icon {
       display: flex;
       flex-direction: row;
-      align-items: end;
-      
-      font-style: italic;
+      gap: 10vh;
+      .service-title::before {
+        content: " ";
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        //margin:0 2vw;
+        width: calc(100%+2vw);
+        width: 100%;
+        height: 100%;
+        z-index: -44;
+        opacity: 0.5;
+        background-color: $gray;
+      }
+      .service-title {
+        color: white;
+        padding: 0 2vh;
+        //visibility: hidden;
+        .darkBl {
+          color: $dark-blue;
+          visibility: visible !important;
+        }
+        .lightBl {
+          color: $light-blue;
+          visibility: visible !important;
+        }
+        .middleBl {
+          color: $middle-blue;
+          visibility: visible !important;
+        }
+        display: flex;
+        flex-direction: row;
+        align-items: end;
+
+        font-style: italic;
+      }
     }
-    
   }
   i {
     font-size: 3em;
@@ -445,42 +458,46 @@ div {
   top: -6vh;
   background-color: #f4d03f;
   background-image: linear-gradient(132deg, #f4d03f 0%, #16a085 100%);
-  background-color: #FF9A8B;
-  background-image: linear-gradient(45deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+  background-color: #ff9a8b;
+  background-image: linear-gradient(
+    45deg,
+    #ff9a8b 0%,
+    #ff6a88 55%,
+    #ff99ac 100%
+  );
   opacity: 0.5;
   //background-image: url("/images/code.PNG");
   //background-image: linear-gradient(45deg, $gray 0%, $light-blue 100%);
-  background-size: 900%;
+  background-size: 400%;
   background-position: left;
   animation: bg-animation 30s infinite;
   z-index: -444;
 }
-.service-d{
-  .service-background{
+.service-d {
+  .service-background {
     background-image: linear-gradient(132deg, $gray 0%, $light-blue 100%);
   }
 }
-.service-fs{
-  .service-background{
+.service-fs {
+  .service-background {
     background-image: linear-gradient(45deg, $gray 0%, $dark-blue 100%);
   }
 }
-.service-os{
-  .service-background{
+.service-os {
+  .service-background {
     background-image: linear-gradient(45deg, $gray 0%, $middle-blue 100%);
   }
 }
-.service-seo{
-  .service-background{
+.service-seo {
+  .service-background {
     background-image: linear-gradient(125deg, $gray 0%, $light-blue 100%);
   }
 }
-.service-dev{
-  .service-background{
+.service-dev {
+  .service-background {
     background-image: linear-gradient(184deg, $gray 0%, $dark-blue 100%);
   }
 }
-
 
 .dynamic {
   position: relative;
@@ -499,8 +516,6 @@ div {
   opacity: 0.1;
   position: absolute;
 }
-
-
 
 .welcomeText {
   display: flex;
