--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,13 @@
+:root {
+  --clr-neon: hsl(317 100% 54%);
+  --clr-neon: #36a9e1;
+  --clr-neon: #006494;
+  --clr-neon: #1d71b8;
+  --clr-bg: hsl(323 21% 16%);
+  --highlightrosa: #FE019A;
+  --highlight: #FF9FD3;
+}
+
 body {
   background: #2c2c2c;
   position: relative;
@@ -23,38 +33,137 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  z-index: 999;
+  z-index: 20;
   width: 100%;
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 44, 44, 0)), color-stop(20%, rgba(44, 44, 44, 0.625088)), color-stop(37%, rgba(44, 44, 44, 0.742735)), color-stop(64%, #2c2c2c), to(#2c2c2c));
-  background: linear-gradient(0deg, rgba(44, 44, 44, 0) 0%, rgba(44, 44, 44, 0.625088) 20%, rgba(44, 44, 44, 0.742735) 37%, #2c2c2c 64%, #2c2c2c 100%);
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 44, 44, 0)), to(#2c2c2c));
+  background: linear-gradient(0deg, rgba(44, 44, 44, 0) 0%, #2c2c2c 100%);
 }
 
 header .logo-header,
 header .header-cta {
-  height: 3vh;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-right: 4vw;
 }
 
-header .logo-header svg,
-header .header-cta svg {
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.neon-button {
+  margin-right: 40vw !important;
+  font-size: 2rem;
+  display: inline-block;
+  display: none;
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--clr-neon);
+  border: var(--clr-neon) 0.125em solid;
+  border-radius: 0.25em;
+  padding: 0.3em .3em;
+  -webkit-box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+          box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+  position: relative;
+}
+
+.sneon-button::before {
+  pointer-events: none;
+  content: "asdf";
+  color: orangered;
+  position: absolute;
+  background: var(--clr-neon);
+  top: 120%;
+  left: 0;
+  width: 100%;
   height: 100%;
+  -webkit-transform: perspective(1em) rotateX(40deg) scale(1, 0.1);
+          transform: perspective(1em) rotateX(40deg) scale(1, 0.1);
+  -webkit-filter: blur(1em);
+          filter: blur(1em);
+  opacity: 0.7;
 }
 
-header .cta {
+.funnytext {
+  pointer-events: none;
+  content: "asdf";
+  color: orangered;
+  position: absolute;
+  background: var(--clr-neon);
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: perspective(1em) rotateX(40deg) scale(1, 1);
+          transform: perspective(1em) rotateX(40deg) scale(1, 1);
+  opacity: 0.5;
+}
+
+.lightanim {
+  pointer-events: none;
+  color: orangered;
+  position: absolute;
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: perspective(6em) rotateX(40deg);
+          transform: perspective(6em) rotateX(40deg);
+  font-size: 20px;
+}
+
+.testfriede {
+  padding-top: 20%;
+}
+
+.testfreude {
+  padding-top: 20%;
+}
+
+.neon-button::after {
+  content: "";
+  position: absolute;
   top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-box-shadow: 0 0 2em 0.5em var(--clr-neon);
+          box-shadow: 0 0 2em 0.5em var(--clr-neon);
+  opacity: 0;
+  background-color: var(--clr-neon);
+  z-index: -1;
+  -webkit-transition: opacity 100ms linear;
+  transition: opacity 100ms linear;
 }
 
-header .cta svg {
-  width: 10px;
+.neon-button:hover,
+.neon-button:focus {
+  color: var(--clr-bg);
+  text-shadow: none;
+}
+
+.neon-button:hover::before,
+.neon-button:focus::before {
+  opacity: 1;
+}
+
+.neon-button:hover::after,
+.neon-button:focus::after {
+  opacity: 1;
+}
+
+* {
+  font-family: "Raleway";
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 main * {
   margin: 0;
   padding: 0;
-  font-family: "Raleway";
-  color: rgba(54, 169, 225, 0.6);
-  color: white;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 main h3 {
@@ -69,6 +178,12 @@ main .middle {
 main p {
   color: white;
   line-height: 2em;
+  color: rgba(54, 169, 225, 0.6);
+  color: white;
+}
+
+main h2 {
+  text-align: center;
 }
 
 main h2,
@@ -96,8 +211,8 @@ div {
           box-sizing: border-box;
 }
 
-#fd {
-  z-index: 66666;
+.fd {
+  z-index: 100;
   position: fixed;
   margin: auto auto;
   width: 80%;
@@ -105,6 +220,39 @@ div {
   right: 0;
   top: 0;
   bottom: 0;
+}
+
+.hero-text-container {
+  position: relative;
+  height: 100vh;
+}
+
+.hero-text {
+  font-family: 'Kaushan Script', cursive;
+  color: var(--highlightrosa);
+  font-size: clamp(20px, 15vw, 100px);
+  color: #FF9FD3;
+  z-index: 100;
+  position: fixed;
+}
+
+.hero-lass {
+  top: 20vh;
+  margin-right: 4vw;
+  left: 5vw;
+}
+
+.hero-deine {
+  top: 60vh;
+  right: 2vw;
+}
+
+.hero-kontakt {
+  bottom: 5vh;
+  right: 2vw;
+  z-index: 100;
+  position: fixed;
+  font-size: 2em;
 }
 
 .heroText,
@@ -238,16 +386,24 @@ div {
 
 .hero .responsive .heroContainer {
   position: relative;
-  padding: 2rem;
-  padding-top: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 8% 2%;
   width: 100%;
+  height: 200%;
   background: #2c2c2c;
-  background: white;
-  background: #2c2c2c;
+  color: #36a9e1;
 }
 
 .hero .responsive .heroContainer svg {
-  margin-bottom: 130px;
   position: relative;
 }
 
@@ -271,45 +427,81 @@ div {
   }
 }
 
-.service-container .service-card {
-  border: 2px, solid, #2c2c2c;
-  border-radius: 50px;
-  margin: 1vh 1vw;
-  padding: 1vh 1vw;
+.service-container .vertical-scroll-container {
+  overflow: hidden;
+  width: 100%;
+}
+
+.service-container .card .title-container::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 10%;
+  top: 20%;
+  width: calc(100%+2vw);
+  width: 100%;
+  height: 50%;
+  opacity: 0.5;
+  background-color: #2c2c2c;
+  background: #2c2c2c;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(44, 44, 44, 0)), color-stop(20%, #2c2c2c), color-stop(80%, #2c2c2c), to(rgba(44, 44, 44, 0)));
+  background: linear-gradient(90deg, rgba(44, 44, 44, 0) 0%, #2c2c2c 20%, #2c2c2c 80%, rgba(44, 44, 44, 0) 100%);
+}
+
+.service-container .card .title-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
-  overflow: hidden;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: clamp(100px, 80vw, 600px);
-  width: 95vw;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 3vh;
+  position: relative;
+  padding: 3vh 3vw;
+  margin-bottom: 3vh;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-items: flex-start;
 }
 
-.service-container .service-card .content p,
-.service-container .service-card .content .service-title {
-  color: #2c2c2c;
-  color: #36a9e1;
-}
-
-.service-container .service-card .service-title {
+.service-container .card .title-container .title {
+  color: white;
+  padding: 0 2vh;
+  font-weight: 600;
   font-size: clamp(13px, 3vw, 20px);
-  font-weight: 400;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
       align-self: center;
-  margin-bottom: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  font-style: italic;
 }
 
-.service-container h2 {
-  text-align: center;
+.service-container .card .title-container .title .darkBl {
+  color: #006494;
+  visibility: visible !important;
 }
 
-.service-container .icon {
-  height: 15vh;
+.service-container .card .title-container .title .lightBl {
+  color: #36a9e1;
+  visibility: visible !important;
+}
+
+.service-container .card .title-container .title .middleBl {
+  color: #1d71b8;
+  visibility: visible !important;
+}
+
+.service-container .card .icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -318,37 +510,26 @@ div {
           justify-content: center;
 }
 
-.service-container .icon i {
+.service-container .card .icon i {
   color: #1d71b8;
   -webkit-background-clip: text;
   font-weight: 900;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(red), to(yellow));
-  background-image: linear-gradient(red, yellow);
+  font-size: 3em;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#36a9e1), to(#006494));
   background-image: linear-gradient(#36a9e1, #006494);
   -webkit-text-fill-color: transparent;
 }
 
-.service-container .icon #services-svg {
+.service-container .card .icon #services-svg {
   visibility: hidden;
 }
 
-.service-container .icon svg {
+.service-container .card .icon svg {
   height: 20vh;
 }
 
-.service-container .moreContentOver .overlay {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 333;
-}
-
-.service-container .moreContentOver {
-  overflow: hidden;
-  width: 100%;
+.service-container .card .extended-content {
+  height: 70%;
 }
 
 .service-container .services {
@@ -387,112 +568,6 @@ div {
   }
 }
 
-.service-container .services.moreContent .service-card {
-  border: 2px, solid, #2c2c2c;
-  margin: 6vh 3vw;
-  padding: 6vh 3vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  max-height: 60vh;
-  width: 90vw;
-  margin-right: 10vw;
-  min-height: 75vh;
-}
-
-@media screen and (min-width: 1200px) {
-  .service-container .services.moreContent .service-card {
-    width: 800px;
-    margin: 6vh 3vw;
-  }
-}
-
-.service-container .services.moreContent .service-card .service-title {
-  font-weight: 600;
-}
-
-.service-container .services.moreContent .service-card .service-title,
-.service-container .services.moreContent .service-card i {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-.service-container .services.moreContent .service-title {
-  font-size: 1.2em;
-}
-
-.service-container .services .extended-content {
-  height: 70%;
-}
-
-.service-container .services .title-icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  gap: 10vh;
-}
-
-.service-container .services .title-icon .service-title::before {
-  content: " ";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: calc(100%+2vw);
-  width: 100%;
-  height: 100%;
-  z-index: -44;
-  opacity: 0.5;
-  background-color: #2c2c2c;
-}
-
-.service-container .services .title-icon .service-title {
-  color: white;
-  padding: 0 2vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
-  font-style: italic;
-}
-
-.service-container .services .title-icon .service-title .darkBl {
-  color: #006494;
-  visibility: visible !important;
-}
-
-.service-container .services .title-icon .service-title .lightBl {
-  color: #36a9e1;
-  visibility: visible !important;
-}
-
-.service-container .services .title-icon .service-title .middleBl {
-  color: #1d71b8;
-  visibility: visible !important;
-}
-
-.service-container i {
-  font-size: 3em;
-}
-
 .service-container .more {
   z-index: 800000;
   cursor: pointer;
@@ -522,7 +597,7 @@ div {
   display: none;
 }
 
-.service-background {
+.moving-background {
   position: absolute;
   height: 150%;
   width: 100%;
@@ -532,43 +607,31 @@ div {
   background-color: #ff9a8b;
   background-image: linear-gradient(45deg, #ff9a8b 0%, #ff6a88 55%, #ff99ac 100%);
   opacity: 0.5;
-  background-size: 400%;
-  background-position: left;
+  background-size: 200%;
   -webkit-animation: bg-animation 30s infinite;
           animation: bg-animation 30s infinite;
   z-index: -444;
 }
 
-.service-d .service-background {
+.service-d .moving-background {
   background-image: linear-gradient(132deg, #2c2c2c 0%, #36a9e1 100%);
+  background-position: right;
 }
 
-.service-fs .service-background {
+.service-fs .moving-background {
   background-image: linear-gradient(45deg, #2c2c2c 0%, #006494 100%);
 }
 
-.service-os .service-background {
+.service-os .moving-background {
   background-image: linear-gradient(45deg, #2c2c2c 0%, #1d71b8 100%);
 }
 
-.service-seo .service-background {
+.service-seo .moving-background {
   background-image: linear-gradient(125deg, #2c2c2c 0%, #36a9e1 100%);
 }
 
-.service-dev .service-background {
+.service-dev .moving-background {
   background-image: linear-gradient(184deg, #2c2c2c 0%, #006494 100%);
-}
-
-.dynamic {
-  position: relative;
-  width: 100%;
-}
-
-.content {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
 }
 
 .wordpress {
@@ -684,13 +747,26 @@ div {
 }
 
 .mask {
-  -webkit-mask-image: url(/images/blob.svg);
+  -webkit-mask-image: url(/images/blobfriede2.svg);
   -webkit-mask-position: center center;
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: cover;
-  mask-image: url(/images/blob.svg);
+  mask-image: url(/images/blobfriede2.svg);
   mask-position: center center;
   mask-repeat: no-repeat;
   mask-size: cover;
+}
+
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.logo-use {
+  display: none;
 }
 /*# sourceMappingURL=styles.css.map */
